--- a/src/Components/main1.css
+++ b/src/Components/main1.css
@@ -14,6 +14,10 @@ body{
 .col10{
     cursor: pointer;
 }
+.btn_signup{
+	background-color:#ff0000 !important;
+	border-color:#ff0000 !important;
+}
 #name:focus{
 outline:none;
 }
